[tool.poetry]
name = "shopper-gpt"
version = "0.1.0"
description = "shopping agents"
authors = ["aman-stelo <aman@stelolabs.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "shopper_gpt"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.13.3"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
