[tool.poetry]
name = "shopper-gpt"
version = "0.1.0"
description = "shopping agents"
authors = ["aman-stelo <aman@stelolabs.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "shopper_gpt" }]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.13.3"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
requests = "^2.31.0"
aiohttp = "^3.9.3"
asyncio = "^3.4.3"
loguru = "^0.7.2"
multion = "^0.3.13"
langchain = "^0.1.10"
asgiref = "^3.7.2"
pydantic = "^2.6.3"
twilio = "^9.0.0"
peewee = "^3.17.1"
pyppeteer = "^2.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
